# docu-cortex

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/api/v1/: chat.py  documents.py
src/core/: config.py  logging.py
src/models/: chat.py  documents.py
src/prompts/: rag_prompt.jinja2  summary_prompt.jinja2
src/services/: analysis_service.py  chat_service.py  document_service.py
templates/: index.html
tests/: conftest.py  test_analysis_service.py  test_chat_service.py  test_documents_api.py  test_main.py
