[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docu-cortex"
version = "0.1.0"
description = "AI-ассистент для анализа документов и ответов на вопросы по их содержимому."

[tool.pytest.ini_options]
asyncio_mode = "auto"

addopts = "-v -p no:cacheprovider"
